--- a/_posts/2018-04-01-syncbn.md
+++ b/_posts/2018-04-01-syncbn.md
@@ -10,16 +10,14 @@ author: <a href="http://hangzh.com/">张航</a> Amazon AI Applied Scientist
 [**[预览版代码链接](https://github.com/zhanghang1989/MXNet-Gluon-SyncBN)**]
 
 ### 写在前面：为什么要跨卡同步 Batch Normalization
-
-  在某些课题任务中，模型的训练非常消耗内存，这样相应分配到每个卡上的批量大小就非常少了，影响模型的收敛效果。之前在我们
-  在图像语义分割的实验中，[Jerry](http://zhongyuezhang.com/)和我就发现使用大模型的效果反而变差，实际上就是BN在作怪。
-  最近在物体检测的竞赛中，使用跨卡BN也会很大提高实验效果，所以跨卡BN俨然成为竞赛刷份、发论文的必备神器。
+在某些课题任务中，模型的训练非常消耗内存，这样相应分配到每个卡上的批量大小就非常少了，影响模型的收敛效果。之前在我们
+在图像语义分割的实验中，[Jerry](http://zhongyuezhang.com/)和我就发现使用大模型的效果反而变差，实际上就是BN在作怪。
+最近在物体检测的竞赛中，使用跨卡BN也会很大提高实验效果，所以跨卡BN俨然成为竞赛刷分、发论文的必备神器。
 
 ### Batch Normalization如何工作，以及它的标准的实现方式
-
 既然是技术贴，读者很多是深学大牛，为什么还要在这里赘述BatchNorm这个简单概念吗？其实不然，很多做科研的朋友如果没有解决过相关问题，
 很容易混淆BN在训练和测试时候的工作方式。记得在17年CVPR的[tutoial](http://deeplearning.csail.mit.edu/)上，
-何凯明和RBG两位大神分别在自己的talk上都特意对强调了BN的工作原理，可见就算台下都是CV的学者，都有必要复习一遍这些知识。
+何凯明和RBG两位大神分别在自己的talk上都特意强调了BN的工作原理，可见就算台下都是CV的学者，都有必要复习一遍这些知识。
 
 - 工作原理：
 
@@ -36,7 +34,7 @@ author: <a href="http://hangzh.com/">张航</a> Amazon AI Applied Scientist
   使用训练集上累积的均值和方差，在back-propagation的时候他们对输入样本没有梯度（gradient）。
 
 - 数据并行：
-  
+
   深度学习平台在多卡（GPU）运算的时候都是采用的数据并行（DataParallel），如下图:
   
   ![](http://hangzh.com/images/bn2.png)
@@ -46,11 +44,9 @@ author: <a href="http://hangzh.com/">张航</a> Amazon AI Applied Scientist
   也是在卡内完成，所以实际BN所归一化的样本数量仅仅局限于卡内，相当于批量大小（batch-size）减小了。
 
 ### 如何实现
-
-  
 跨卡同步BN的关键是在前向运算的时候拿到全局的均值$$\mu$$和方差$$\sigma$$，在后向运算时候得到相应的全局梯度。
 最简单的实现方法是先同步求均值，再发回各卡然后同步求方差，但是这样就同步了两次。实际上只需要同步一次就可以，
-我们使用了一个非常简单的技巧，把方差表示为$$\sigma^2=\sum x^2-\mu^2=\sum x^2-\frac{(\sum x_i)^2}{N^2}$$，
+我们使用了一个非常简单的技巧，把方差表示为$$\sigma^2=\frac{\sum x^2}{N}-\mu^2=\frac{\sum x^2}{N}-\frac{(\sum x_i)^2}{N^2}$$，
 附上一张图：
   
 ![](http://hangzh.com/images/bn3.png)
@@ -63,7 +59,6 @@ author: <a href="http://hangzh.com/">张航</a> Amazon AI Applied Scientist
 有了跨卡BN我们就不用担心模型过大用多卡影响收敛效果了，不管用多少张卡，都会得到相同的效果。
 
 ### 常见问答
-
 - 模型是否可以 Hybridize？
 
   训练不行，测试可以。
